--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,27 @@
 body {
-  background-color: indigo;
+  background-color: black;
+  color: white;
+}
+
+.header__hero {
+  font-family: Raleway;
+  font-size: 72px;
+  font-weight: 800;
+  line-height: 1;
+}
+
+.navigation__list {
+  font-family: Nunito;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.8;
+  list-style: none;
+  opacity: 0.8;
+}
+
+.header__bio {
+  font-family: Nunito;
+  font-weight: 600;
+  font-size: 24px;
+  opacity: 0.5;
 }
