--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,6 +20,7 @@ header {
   width: 60vw;
   height: 100vh;
   display: grid;
+  grid-gap: 1rem;
   grid-template-columns: 1fr auto;
   grid-template-rows: auto 40vh auto auto auto;
   align-items: end;
